# hypercubes

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Description.md  README.org  dimension.hpp  dimension_implementation.hpp  hypercubes.hpp  hypercubes_implementation.hpp  implementation.org  notes.org  partitions.hpp  partitions_test.cpp  todo.org
.github/workflows/: main.yml
benchmarks/: CMakeLists.txt  grid_like.cpp  test_grid_like.cpp
cpp/: CMakeLists.txt  compile_commands.json  notes.org
cpp-old/: dimension.hpp  dimension_implementation.hpp  even_odd.hpp  hypercubes.hpp  layout.hpp
cpp-old/partitioning/: Makefile  base_multid.hpp  coordinate.hpp  partition_tree.hpp  q.hpp  qr.hpp  request.hpp  test.cpp  test_indexing
cpp/include/: dimensionalise.hpp  eo.hpp  eo_partitioning.hpp  geometry.hpp  partition_class_tree.hpp  partition_predicates.hpp  partition_tree.hpp  partition_tree_allocations.hpp  partitioners.hpp  partitioning.hpp  print_utils.hpp  size_tree_iterator.hpp  tree.hpp  utils.hpp
cpp/include/1D/: hbb1D.hpp  partitioning1D.hpp  plain1D.hpp  q1D.hpp
cpp/src/: bool_maybe.cpp  eo.cpp  eo_partitioning.cpp  geometry.cpp  partition_class_tree.cpp  partition_predicates.cpp  partition_tree.cpp  partition_tree_allocations.cpp  partitioners.cpp  partitioning.cpp  print_utils.cpp  size_tree_iterator.cpp
cpp/src/1D/: hbb1D.cpp  partitioning1D.cpp  plain1D.cpp  q1D.cpp
cpp/tests/: CMakeLists.txt  fixtures.cpp  fixtures.hpp  random_int_list.hpp  test_comments.cpp  test_dimensionalise.cpp  test_dimensionalise_q1D.cpp  test_eo.cpp  test_eo_partitioning.cpp  test_hbb1D.cpp  test_partition_class_tree.cpp  test_partition_predicates.cpp  test_partition_tree.cpp  test_partition_tree_allocations.cpp  test_partitioners.cpp  test_partitioning1D.cpp  test_pct_full.cpp  test_plain1D.cpp  test_q1D.cpp  test_rilist.cpp  test_size_tree_iterator.cpp  test_tree.cpp  test_utils.cpp  test_utils.hpp  utils.cpp  utils.hpp
cpp/trash-can/: test_utils.cpp  utils.hpp  zip_utils.hpp
include/: geometry.hpp  kvtree.hpp  level_swap.hpp  memoisation.hpp  memoisation_details.hpp  partition_tree.hpp  partition_tree_allocations.hpp  partitioners.hpp  print_utils.hpp  site.hpp  size_tree_iterator.hpp  tree.hpp  tree_data_structure.hpp  tuple_printer.hpp
include/1D/: partitioning1D.hpp  q1D.hpp
include/api/: memory_layout.hpp  memory_layout_inttypes.hpp
include/api_v2/: level_names.hpp  transform_network.hpp  transform_request_makers.hpp  transform_requests.hpp  transformer.hpp  transformer_network.hpp  tree_transform.hpp
include/exceptions/: exceptions.hpp
include/geometry/: eo.hpp  geometry.hpp  int_vec_wrappers.hpp
include/partitioners/: dimensionalise.hpp  eo_partitioning.hpp  partitioners.hpp  partitioning.hpp  site.hpp
include/selectors/: bool_maybe.hpp  intervals.hpp  partition_predicates.hpp  prune_tree.hpp  selectors.hpp
include/trees/: kvtree.hpp  kvtree_data_structure.hpp  kvtree_v2.hpp  level_swap.hpp  partition_tree.hpp  partition_tree_allocations.hpp  size_tree_iterator.hpp  tree.hpp  tree_data_structure.hpp
include/utils/: print_utils.hpp  utils.hpp
partitioning/: Makefile  base.hpp  coordinate.hpp  hbb.hpp  indexer.hpp  leaf.hpp  q.hpp  qr.hpp  test.cpp  test_indexing.cpp  toposorting.hpp
python/: .gitignore  eo_partitioning.py  hbb1D.py  leaf1D.py  main.py  main2.py  monodimensional.py  multidimensional.py  partitioners.py  partitioning.py  partitioning1D.py  partitioning_tree.py  q1D.py  test.py  tree.py  wrappers.py
python/src/: bool_maybe.py  dimensionalise.py  eo.py  eo_partitioning.py  fixtures.py  hbb1D.py  leaf1D.py  level_dependencies.py  max_idx.py  partition_class_tree.py  partition_predicates.py  partition_tree.py  partitioners.py  partitioning.py  partitioning1D.py  partitioning_tree.py  q1D.py  tree.py  wrappers.py
python/tests/: fixtures.py  test_1D_ghosts.py  test_4D_real_index.py  test_allocation_sizes.py  test_bool_maybe.py  test_eo.py  test_get_partition_limits.py  test_idx_to_coords.py  test_idx_to_coords_eo.py  test_iterate.py  test_level_dependencies.py  test_parity_count.py  test_partition_predicates.py  test_swap_levels.py  test_symmetric_reordering.py  test_ziptree.py
python/unused/: unused.py
src/: eo.cpp  eo_partitioning.cpp  level_swap.cpp  partition_tree.cpp  partition_tree_allocations.cpp  partitioners.cpp  site.cpp  size_tree_iterator.cpp
src/1D/: hbb1D.cpp  partitioning1D.cpp  plain1D.cpp
src/api/: memory_layout.cpp
src/api_v2/: level_names.cpp  transform_network.cpp  transform_request_makers.cpp  transform_requests.cpp  transformer.cpp  tree_transform.cpp
src/geometry/: eo.cpp  geometry.cpp  int_vec_wrappers.cpp
src/partitioners/: eo_partitioning.cpp  partitioners.cpp  partitioning.cpp  site.cpp
src/selectors/: bool_maybe.cpp  intervals.cpp  partition_predicates.cpp  selectors.cpp
tests/: CMakeLists.txt  boost_test_helper.cpp  fixtures.cpp  fixtures.hpp  test_bool_maybe.cpp  test_comments.cpp  test_dimensionalise.cpp  test_eo.cpp  test_eo_partitioning.cpp  test_geometry.cpp  test_hbb1D.cpp  test_intervals.cpp  test_kvtree.cpp  test_kvtree_v2.cpp  test_level_swap.cpp  test_memoisation.cpp  test_partition_predicates.cpp  test_partition_tree.cpp  test_partition_tree_allocations.cpp  test_partitioners.cpp  test_pct_full.cpp  test_prune_tree.cpp  test_pt_full.cpp  test_rilist.cpp  test_selectors.cpp  test_size_tree_iterator.cpp  test_tree.cpp  test_utils.hpp
tests/1D/: CMakeLists.txt  test_hbb1D.cpp  test_partitioning1D.cpp  test_plain1D.cpp  test_q1D.cpp
tests/api/: CMakeLists.txt  fixtures1D.cpp  fixtures1D.hpp  fixtures2D.cpp  fixtures2D.hpp  fixtures4D.cpp  fixtures4D.hpp  test_alignment.cpp  test_grid_like.cpp  test_int_typed.cpp  test_nchildren_tree.cpp  test_offset_tree.cpp  test_partition_tree.cpp  test_permutation_ragged.cpp  test_size_tree.cpp  test_tree_level_matcher.cpp
tests/api_v2/: CMakeLists.txt  test_composite_transform_requests.cpp  test_level_names.cpp  test_transform_network.cpp  test_transform_request_makers.cpp  test_transform_requests.cpp  test_transformer.cpp  test_tree_transform.cpp
(+15 files in other folders)
